syntax = "proto3";

package api.server.alarm.history;

import "google/api/annotations.proto";
import "validate/validate.proto";
import "base.proto";
import "model.proto";

option go_package = "prometheus-manager/api/server/alarm/history;history";
option java_multiple_files = true;
option java_package = "api.server.alarm.history";

// 报警历史模块相关接口
service History {
	// 获取报警历史详情
	rpc GetHistory (GetHistoryRequest) returns (GetHistoryReply) {
		option (google.api.http) = {
			post: "/api/v1/alarm/history/get"
			body: "*"
		};
	}

	// 获取报警历史列表
	rpc ListHistory (ListHistoryRequest) returns (ListHistoryReply) {
		option (google.api.http) = {
			post: "/api/v1/alarm/history/list"
			body: "*"
		};
	}
}

// 获取报警历史详情请求参数
message GetHistoryRequest {
	// 报警历史ID, 0 < id
	uint32 id = 1 [(validate.rules).uint32.gt = 0];
}
// 获取报警历史详情响应参数
message GetHistoryReply {
	// 报警历史详情
	AlarmHistoryV1 alarmHistory = 1;
}

// 获取报警历史列表请求参数
message ListHistoryRequest {
	// 分页参数
	PageRequest page = 1 [(validate.rules).message.required = true];
	// 关键字
	string keyword = 2;
	// 报警状态, 对应PromDictV1 id
	Status status = 3 [(validate.rules).enum = {defined_only: true}];
	// 报警页面, 对应AlarmPageV1 id
	repeated uint32 alarmPages = 4;
	// 开始时间, unix时间戳
	int64 firingStartAt = 5;
	// 结束时间, unix时间戳
	int64 firingEndAt = 6;
	// 报警等级
	repeated uint32 alarmLevelIds = 7;
	// 告警策略
	repeated uint32 strategyIds = 8;
	// 恢复开始时间
	int64 resolvedStartAt = 9;
	// 恢复结束时间
	int64 resolvedEndAt = 10;
	// 持续时间
	int64 duration = 11 [(validate.rules).int64.gte = 0];
}
// 获取报警历史列表响应参数
message ListHistoryReply {
	// 分页参数
	PageReply page = 1;
	// 报警历史列表
	repeated AlarmHistoryV1 list = 2;
}